# Task-3

./: CMakeLists.txt  CMakePresets.json  Code_reader.cpp  Code_reader.h  Main.cpp  Test.cpp
Testing/: Code_reader_result.txt  Task_3_test.exe.gta.testdurations
Testing/For_test/: For_test1.h
Testing/For_test/For_test2/: For_test1.cpp
Testing/For_test/Test cases/: Priority_case.cpp  Priority_case_large.cpp  Simple_case.cpp
